--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test:ng": "ng test",
     "test": "echo 'Not Implemented'",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ngcc"
   },
   "private": true,
   "dependencies": {
